2008-10-17	Rodrigo B. de Oliveira <rodrigobamboo@gmail.com>

	* Mono.Cecil.Pdb.csproj
	* Mono.Cecil.Pdb/ImageDebugDirectory.cs
	* Mono.Cecil.Pdb/ISymUnmanagedWriter2.cs
	* Mono.Cecil.Pdb/PdbFactory.cs.orig
	* Mono.Cecil.Pdb/ISymUnmanagedDocumentWriter.cs
	* Mono.Cecil.Pdb/ISymUnmanagedWriter.cs
	* Mono.Cecil.Pdb/PdbWriter.cs.orig
	* Mono.Cecil.Pdb/SymDocumentWriter.cs
	* Mono.Cecil.Pdb/SymWriter.cs
	* Mono.Cecil.Pdb/PdbFactory.cs
	* Mono.Cecil.Pdb/PdbWriter.cs
	* Mono.Cecil.Pdb/PdbHelper.cs:
		Patch by Juerg Billeter fixing PDB patching
		(http://groups.google.com/group/mono-cecil/browse_thread/thread/c714ae6ad2a9d092/f8b0f92caefeca14).

2008-10-07  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil.Pdb/PdbWriter.cs: use variable's index
	when writing variable infos.
	Patch by Andreas Noever <andreas.noever@gmail.com>.

2008-04-19  Sebastien Pouliot  <sebastien@ximian.com>

	* Mono.Cecil.Pdb/PdbFactory.cs: Use the same parameter names as the
	ISymbolStoreFactory uses (this pleases Gendarme)
	* Mono.Cecil.Pdb/PdbReader.cs: Update wrt interface change (i.e.
	Read now provide a Dictionary to reuse the existing Hashtable
	between	offsets and instructions).

2007-11-15	Rodrigo B. de Oliveira <rodrigobamboo@gmail.com>

	* Mono.Cecil.Pdb/default.build: fixed relative paths

2007-02-21  Jb Evain  <jb@nurv.fr>

	* Start working on local var debug infos emitting.

2007-02-21  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil.Pdb/PdbReader.cs
	  Mono.Cecil.Pdb/PdbHelper.cs
	  Mono.Cecil.Pdb/IMetaDataDispenser.cs:
		Refactor patches from:
		Sverre Boschman <s.r.boschman@iego-development.nl>

		- Force the release of the lock on the pdb on reading
		- Implement the ability to read a pdb in memory

2006-09-24  Jb Evain  <jbevain@gmail.com>

	* Handle the fact that a scope end points outside the cil stream.

2006-09-20  Jb Evain  <jbevain@gmail.com>

	* implement somes bits of the writing stuff.

2006-09-19  Jb Evain  <jbevain@gmail.com>

	* first checkin in SVN: