@@ -1,3 +1,8 @@
+2008-12-02  Rodrigo B. de Oliveira <rodrigobamboo@gmail.com>
+
+	* Mono.Cecil.Pdb/PdbWriter.cs:
+		always closes scopes.
+
 2008-10-17	Rodrigo B. de Oliveira <rodrigobamboo@gmail.com>
 
 	* Mono.Cecil.Pdb.csproj
